fixed horizontal scrollbar issue

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,9 +1,9 @@
 @import './Styles/Colors';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-.test {
-  border: 2px solid blue;
-}
+// .test {
+//   border: 2px solid blue;
+// }
 
 * {
   box-sizing: border-box;
