--- a/client/src/Styles/Wrapper.scss
+++ b/client/src/Styles/Wrapper.scss
@@ -3,7 +3,7 @@
   z-index: -10;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   background: black url('../assets/images/asteroidsCompressed.jpg') no-repeat
